<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:shape_solidColor="@color/white"
    app:shape_topLeftRadius="12dp"
    app:shape_topRightRadius="12dp">

    <TextView
        android:id="@+id/tv_add_black"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/str_add_to_blacklist"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/str_delete"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider" />

    <TextView
        android:id="@+id/tv_report"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/str_report"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/color_divider" />

    <TextView
        android:id="@+id/tv_cancle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/str_cancel"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider" />

</com.hjq.shape.layout.ShapeLinearLayout>