<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    android:paddingBottom="20dp">

    <com.hjq.shape.layout.ShapeRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingHorizontal="12dp"
        app:shape_radius="16dp"
        app:shape_solidColor="@color/white">


        <ImageView
            android:id="@+id/iv_ads"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_no_ads" />

        <TextView
            android:id="@+id/tv_ad_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/iv_ads"
            android:text="@string/str_ads_free"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ad_title"
            android:layout_alignStart="@id/tv_ad_title"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/btn_buy_vip"
            android:text="@string/str_ads_free_tip"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <com.cute.uibase.PositiveButton
            android:id="@+id/btn_buy_vip"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingHorizontal="12dp"
            android:text="@string/str_become_vip"
            android:textSize="14sp" />

    </com.hjq.shape.layout.ShapeRelativeLayout>
</FrameLayout>
